<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createaccount">

    <TextView
        android:id="@+id/passwordTitleCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="48dp"
        android:text="@string/passwordTextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTitleCreateAccount" />

    <TextView
        android:id="@+id/createAccountTitleText"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="32dp"
        android:text="@string/createaccountTitle"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameTitleCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="96dp"
        android:text="@string/usernameTextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/re_enterPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="48dp"
        android:text="@string/re_enterPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTitleCreateAccount" />

    <EditText
        android:id="@+id/editTextUsernameCreateAcc"
        android:layout_width="220dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/usernameTitleCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/createAccountTitleText" />

    <EditText
        android:id="@+id/editTextPasswordCreateAcc"
        android:layout_width="220dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/passwordTitleCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsernameCreateAcc" />

    <EditText
        android:id="@+id/editTextRe_enterPassword"
        android:layout_width="220dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/re_enterPasswordTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordCreateAcc" />

    <Button
        android:id="@+id/createAccButtonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="296dp"
        android:text="@string/createaccountTitle"
        android:textColor="#40E847"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancelCreateAccButton"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccButtonConfirm" />
</androidx.constraintlayout.widget.ConstraintLayout>